# DECT-NR-Plus-SDR

./: .clang-format  .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  COPYRIGHT  README.md
apps/dectnrp/: CMakeLists.txt  dectnrp.cpp
lib/src/: CMakeLists.txt
lib/src/application/: CMakeLists.txt  app.cpp  app_client.cpp  app_server.cpp  application.cpp  application_client.cpp  application_server.cpp  items.cpp
lib/src/application/queue/: queue.cpp
lib/src/application/socket/: CMakeLists.txt  socket_client.cpp  socket_server.cpp  socketx.cpp
lib/src/application/vnic/: CMakeLists.txt  vnic.cpp  vnic_client.cpp  vnic_server.cpp
lib/src/apps/: CMakeLists.txt  stream.cpp  udp.cpp
lib/src/apps/test/: CMakeLists.txt  udp.cpp
lib/src/common/: CMakeLists.txt  ant.cpp  json_export.cpp  json_parse.cpp  randomgen.cpp
lib/src/common/adt/: CMakeLists.txt
lib/src/common/json/: CMakeLists.txt  json_export.cpp  json_parse.cpp
lib/src/common/layer/: layer_unit.cpp
lib/src/common/prog/: log.cpp  simd.cpp
lib/src/common/test/: CMakeLists.txt  ant.cpp
lib/src/common/thread/: CMakeLists.txt  lockable_outer_inner.cpp  spinlock.cpp  threads.cpp  watch.cpp
lib/src/cvg/: CMakeLists.txt  cvg.cpp
lib/src/cvg/io/: CMakeLists.txt
lib/src/cvg/test/: CMakeLists.txt  cvg.cpp
lib/src/dlc/: CMakeLists.txt  dlc.cpp
lib/src/dlccl/: CMakeLists.txt  dlccl.cpp
lib/src/mac/: CMakeLists.txt  contact_list.cpp  feedback_plan.cpp
lib/src/mac/allocation/: CMakeLists.txt  allocation_ft.cpp  allocation_pt.cpp  resource.cpp
lib/src/mac/pll/: CMakeLists.txt  pll.cpp
lib/src/mac/ppx/: pll.cpp  ppx.cpp  ppx_pll.cpp
lib/src/phy/: CMakeLists.txt  phy.cpp  phy_config.cpp  tx_rx.cpp  worker_pool.cpp  worker_pool_config.cpp
lib/src/phy/agc/: agc.cpp  agc_rx.cpp  agc_tx.cpp  roundrobin.cpp
lib/src/phy/dft/: ofdm.cpp  windowing.cpp
lib/src/phy/fec/: CMakeLists.txt  fec.cpp  pcc_enc.cpp  pdc_enc.cpp
lib/src/phy/filter/: bessel.cpp  kaiser.cpp  raised_cosine.cpp  rectangular.cpp
lib/src/phy/harq/: CMakeLists.txt  buffer.cpp  buffer_rx.cpp  buffer_rx_plcf.cpp  buffer_tx.cpp  process.cpp  process_pool.cpp  process_rx.cpp  process_tx.cpp
lib/src/phy/indicators/: cqi_lut.cpp
lib/src/phy/mix/: mixer.cpp
lib/src/phy/pool/: baton.cpp  irregular.cpp  irregular_queue.cpp  job_queue.cpp  job_queue_mc.cpp  job_queue_naive.cpp  token.cpp  worker_sync.cpp  worker_tx_rx.cpp
lib/src/phy/resample/: resampler.cpp
lib/src/phy/rx/: CMakeLists.txt  localbuffer.cpp  rx_pacer.cpp
lib/src/phy/tx/: CMakeLists.txt  tx.cpp
lib/src/radio/: CMakeLists.txt  antenna_array.cpp  buffer_rx.cpp  buffer_tx.cpp  buffer_tx_pool.cpp  complex.cpp  gain_lut.cpp  hw.cpp  hw_config.cpp  hw_simulator.cpp  hw_soapy.cpp  hw_usrp.cpp  pps_sync.cpp  radio.cpp  radio_config.cpp  txrx_delay.cpp
lib/src/sections_part2/: CMakeLists.txt  channel_arrangement.cpp  channel_bandwidth.cpp  operating_bands.cpp  radio_device_measurement.cpp  reference_time.cpp  transmitter_power.cpp
lib/src/sections_part3/: CMakeLists.txt  beamforming_and_antenna_port_mapping.cpp  drs.cpp  mcs.cpp  numerologies.cpp  pcc.cpp  pdc.cpp  physical_resources.cpp  radio_device_class.cpp  scrambling_pdc.cpp  stf.cpp  tm_mode.cpp  transmission_packet_structure.cpp  transmit_diversity_precoding.cpp  transport_block_size.cpp
lib/src/sections_part3/derivative/: CMakeLists.txt  duration.cpp  duration_ec.cpp  duration_lut.cpp  packet_sizes.cpp
lib/src/sections_part3/fix/: CMakeLists.txt  cbsegm.cpp  mod.cpp  scrambling.cpp
lib/src/sections_part4/: CMakeLists.txt  plcf_mht_mch.cpp  psdef_plcf_mac_pdu.cpp
lib/src/sections_part4/mac_architecture/: identity.cpp
lib/src/sections_part4/mac_messages_and_ie/: CMakeLists.txt  association_release_message.cpp  association_request_message.cpp  association_response_message.cpp  broadcast_indication_ie.cpp  cluster_beacon_message.cpp  configuration_request_ie.cpp  group_assignment_ie.cpp  higher_layer_signalling.cpp  load_info_ie.cpp  mac_security_info_ie.cpp  measurement_report_ie.cpp  mmie.cpp  mmie_pool_tx.cpp  neighbouring_ie.cpp  network_beacon_message.cpp  padding_ie.cpp  radio_device_status_ie.cpp  random_access_resource_ie.cpp  rd_capability_ie.cpp  reconfiguration_request_message.cpp  reconfiguration_response_message.cpp  resource_allocation_ie.cpp  route_info_ie.cpp  user_plane_data.cpp
lib/src/sections_part4/mac_pdu/: CMakeLists.txt  mac_common_header.cpp  mac_header_type.cpp  mac_multiplexing_header.cpp  mac_pdu_decoder.cpp
lib/src/sections_part4/physical_header_field/: CMakeLists.txt  feedback_info.cpp  plcf_10.cpp  plcf_20.cpp  plcf_21.cpp  plcf_base.cpp  plcf_decoder.cpp
lib/src/sections_part5/: CMakeLists.txt
lib/src/sections_part5/cvg_procedures_and_data_units/: CMakeLists.txt  cvg.cpp  cvg_entity.cpp
lib/src/sections_part5/dlc_procedures_and_data_units/: CMakeLists.txt  dlc.cpp  dlc_entity.cpp
lib/src/sections_part5_cvg/: CMakeLists.txt
lib/src/sections_part5_cvg/procedures/: CMakeLists.txt  cvg_procedure.cpp
lib/src/sections_part5_cvg/protocol_data_units/: CMakeLists.txt
lib/src/sections_part5_dlc/: CMakeLists.txt
lib/src/sections_part5_dlc/procedures/: CMakeLists.txt  dlc_procedure.cpp
lib/src/sections_part5_dlc/protocol_data_units/: CMakeLists.txt
lib/src/simulation/: CMakeLists.txt  vspace.cpp
lib/src/simulation/hardware/: CMakeLists.txt  clip.cpp  noise.cpp  quantize.cpp
lib/src/simulation/topology/: CMakeLists.txt  graph.cpp  position.cpp  trajectory.cpp
lib/src/simulation/vspp/: vspp.cpp  vspprx.cpp  vspptx.cpp
lib/src/simulation/wireless/: channel.cpp  channel_awgn.cpp  channel_doubly.cpp  channel_flat.cpp  link.cpp  pathloss.cpp
lib/src/upper/: CMakeLists.txt  tpoint.cpp  tpoint_config.cpp  tpoint_state.cpp  tpoint_stats.cpp  upper.cpp  upper_config.cpp
lib/src/upper/basic/: tfw_basic.cpp
lib/src/upper/chscanner/: tfw_chscanner.cpp
lib/src/upper/loopback/: result.cpp  tfw_loopback.cpp  tfw_loopback_mmie.cpp  tfw_loopback_ratio.cpp  tfw_loopback_snr.cpp
lib/src/upper/p2p/: CMakeLists.txt  README.md  tfw_p2p_base_once.cpp  tfw_p2p_ft.cpp  (+10 more)
(+542 files in other folders)
