#
# Copyright 2023-present Maxim Penner
#
# This file is part of DECTNRP.
#
# DECTNRP is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as
# published by the Free Software Foundation, either version 3 of
# the License, or (at your option) any later version.
#
# DECTNRP is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU Affero General Public License for more details.
#
# A copy of the GNU Affero General Public License can be found in
# the LICENSE file in the top-level directory of this distribution
# and at http://www.gnu.org/licenses/.
#

add_subdirectory(application)
add_subdirectory(apps)
add_subdirectory(common)
add_subdirectory(cvg)
add_subdirectory(dlc)
add_subdirectory(mac)
add_subdirectory(phy)
add_subdirectory(radio)
add_subdirectory(sections_part2)
add_subdirectory(sections_part3)
add_subdirectory(sections_part4)
add_subdirectory(sections_part5_cvg)
add_subdirectory(sections_part5_dlc)
add_subdirectory(simulation)
add_subdirectory(upper)
